--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenisbasquete.webp" alt="">
-                <h1 class="titulo">imagem 1</h1>
+                <h1 class="titulo">Kyrie 7</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenisbasquete2.webp" alt="">
-                <h1 class="titulo">Imagem 2</h1>
+                <h1 class="titulo">Kyrie 4 lv</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenisbasquete3.jpeg" alt="">
-                <h1 class="titulo">Imagem 3</h1>
+                <h1 class="titulo">Kyrie Low 4</h1>
             </div>
             <span>
             </span>
@@ -57,16 +57,16 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenis4.jpg" alt="">
-                <h1 class="titulo">Imagem 4</h1>
+                <h1 class="titulo">Kyrie 4 EP ALL STAR</h1>
             </div>
     
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenis5.jpeg" alt="">
-                <h1 class="titulo">Imagem 5</h1>
+                <h1 class="titulo">Kyrie Kybrid S2</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenis6.jpeg" alt="">
-                <h1 class="titulo">Imagem 6</h1>
+                <h1 class="titulo">Kyrie 5 white denim</h1>
             </div>
             <span>
             </span>
@@ -74,15 +74,15 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenis7.jpeg" alt="">
-                <h1 class="titulo">Imagem 7</h1>
+                <h1 class="titulo">Kyrie Low 4 "keep sue fresh"</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenis8.jpeg" alt="">
-                <h1 class="titulo">Imagem 8</h1>
+                <h1 class="titulo">Kyrie Low 4 "1 world 1 people"</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/tenis9.webp" alt="">
-                <h1 class="titulo">Imagem 9</h1>
+                <h1 class="titulo">Kyrie Low 4</h1>
             </div>
         </div>
 
