--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 <li class="lista-menu_item"><a href="#"> Kyrie Low 4 "1 world 1 people"</a></li>
                 <li class="lista-menu_item"><a href="#"> Kyrie Low 4</a></li>
             </ul>
-           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
+           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a> 
+           <h1 class="titulo__cabecalho">Colégio Wilson Joffre</h1>
         </div>
         <div class="container">
            <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="meus Favoritos"></a>
